# cmake_test

ch1/: CMakeLists.txt  readme.md
ch1-helloWorld/: CMakeLists.txt  readme.md
ch10-使用ninja构建/: readme.md
ch11-导入目标/: CMakeLists.txt  readme.md
ch12-设置c++标准/: readme.md
ch12-设置c++标准/after_3.1_1/: CMakeLists.txt  main.cpp
ch12-设置c++标准/before_3.1/: CMakeLists.txt
ch13-构建子项目/: CMakeLists.txt  readme.md
ch13-构建子项目/subbinary/: CMakeLists.txt
ch13-构建子项目/sublibrary1/include/sublib1/: sublib1.h
ch2-分离编译/: CMakeLists.txt  readme.md
ch3-静态库/: CMakeLists.txt  readme.md
ch4-动态库/: CMakeLists.txt  readme.md
ch4-动态库/src/: hello.cpp
ch5-安装项目/: CMakeLists.txt  readme.md
ch5-安装项目/src/: hello.cpp
ch6-生成类型/: CMakeLists.txt  readme.md
ch7-编译标志/: CMakeLists.txt  readme.md
ch8-包含第三方库/: CMakeLists.txt  readme.md
ch9-使用clang编译/: readme.md
交叉编译/: readme.md
